# blazebackup

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  PLAN.md  README.md  Tutorial.md  config.json  example.env
.gitea/workflows/: nightly.yaml  release.yaml
.github/workflows/: build.yml  nightly.yml  release.yml
src/: buckets.rs  config.rs  fileutil.rs  main.rs  state.rs
tests/: integration_test.rs
workflows/: build.yaml
