[package]
name = "blazebackup"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
aws-config = { version = "1.8.12", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.119.0"
chrono = { version = "0.4.43", features = ["now"] }
dotenv = "0.15.0"
futures = "0.3.31"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sevenz-rust2 = "0.20.1"
simplehash = "0.1.3"
simplelog = "0.12.2"
tempfile = "3.25.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.25.0"
